syntax = "proto3";

option java_multiple_files = false;
option java_package = "org.psy.practice.grpcdemo.api.protobuf";


// The greeting service definition.
service MyService {
    // Sends a greeting
    rpc SayHello (HelloRequest) returns (HelloReply) {
    }
}

// The request message containing the user's name.
message HelloRequest {
    string name = 1;
}

// The response message containing the greetings
message HelloReply {
    string message = 1;
}